add api routes for user related services
Api endpoints created and tested related to user and authentication

- Add , Delete , Update , Fetch Users
- Login , Logout and Generate Token endpoints for authentication

Tokens were introduced for authentication with access toekn being a short lived means of auth and refresh token sent accessed via cookies to be a longer-lasting means for access token re-issuing .

Gateway server introduced as the endpoint for accessing all micro-services using proxy networks.

Schemas are centrally defined using npm link to maintain consistency among all services in the event of updation of schema.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 
 # dependencies
 frontend/node_modules
+friends_related_services/node_modules
+*/node_modules
+*.env
+backend/node_modules
 backend/node_modules
 frontend/.env
 backend/.env
@@ -45,3 +49,7 @@ frontend/next-env.d.ts
 
 reference.txt
 list_of_all_services
+ContextForGPT
+
+Curl-Commands.txt
+todo.txt
