--- a/chat-shared-schemas/package.json
+++ b/chat-shared-schemas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-shared-models",
+  "name": "chat-shared-schemas",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
