--- a/user-related-services/package.json
+++ b/user-related-services/package.json
@@ -8,5 +8,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "chat-shared-models": "file:../chat-shared-models",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.1",
+    "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10",
+    "uuid": "^11.1.0"
   }
 }
