feat: add sign-up page
- Add Sign-up page
- Integrated oauth logic with google and github auth and custom auth
- Appropriate changes to dependancies were made.

--- a/user-related-services/.env.sample
+++ b/user-related-services/.env.sample
@@ -1,2 +1,17 @@
-MYSQL_PASSWORD = 
+MYSQL_PASSWORD =
 MYSQL_DATABASE = 
+PORT=
+
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+OAUTH_REDIRECT_URI=
+OAUTH_PLACEHOLDER_PASSWORD=
