--- a/user-related-services/package.json
+++ b/user-related-services/package.json
@@ -21,6 +21,9 @@
     "mongoose": "^8.15.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^11.1.0"
   }
 }
