--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
     "cors": "^2.8.5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.515.0",
+    "moment": "^2.30.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "validator": "^13.15.15"
   },
   "devDependencies": {
